2002-03-03  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-index-model.c: use the new YELP_SECTION-macro.
	* src/yelp-view-toc.c: same.
	* src/yelp-util.c: same.
	* src/yelp-scrollkeeper.c: same.

	* src/yelp-section.h: added casting macro YELP_SECTION.

	* src/yelp-base.c (yelp_base_new): pass index-list to info init.

	* src/yelp-info.c (yelp_info_init): 
	- Fixes #73291
	- added index-list to argument.
	- add info pages to index-list.

	* src/yelp-view-toc.c (yelp_view_toc_start): 
	- Fixes #72146
	- Don't show "Other documents" if neither man or info are
	  installed.
	- Don't show "Manual pages" link if no man pages are installed
	- Don't show "Info pages" link of no info pages are installed.

	* src/yelp-man.c (yelp_man_init): 
	- return FALSE and don't create a topnode 'man' in the content
	  tree if there weren't any man pages installed.

	* src/yelp-info.c (yelp_info_init): 
	- return FALSE if no info pages was found. Also don't create the
	  topnode 'info' in the content-tree if there weren't any pages.

	* src/yelp-html.c: removed commeted code.

	* src/yelp-base.c (yelp_base_new): don't care about the result for
	  now.

	* src/yelp-info.c:
	- Fixes #73270
	(yelp_info_read_info_dir): renamed from
	  yelp_info_populate_tree_for_subdir. It not takes a list instead.
	(yelp_info_init): First read the sections into a list, sort it and
	  append it to the GNode.

	* src/yelp-info.c: conform with the Yelp coding style.
	* src/yelp-man.c: same

	* configure.in (GNOMELOCALEDIR): depend on a certain number of
	  libgnome, will update this when new libgnome get's released.

	* src/yelp-window.c:
	- Fixes #73056
	(yelp_window_new): don't create index view if no index is
	  available.  
	(yw_create_toolbar): don't add index-button if index is not
	  available. 
	(yw_populate): don't insert index page in notebook if index is not
	  present.

	* src/yelp-base.c:
	(impl_Yelp_getWindows): added/impl.
	(yelp_base_class_init): use getWindows.
